--- a/Zedit-UIKit/Base.lproj/Main.storyboard
+++ b/Zedit-UIKit/Base.lproj/Main.storyboard
@@ -680,8 +680,31 @@
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="aw8-qe-mWp">
                                 <rect key="frame" x="8" y="103" width="377" height="715"/>
                                 <subviews>
+                                    <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="HZY-oA-iJg">
+                                        <rect key="frame" x="0.0" y="0.0" width="377" height="60"/>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="60" id="evi-oj-3QU"/>
+                                        </constraints>
+                                        <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="HqD-C5-p3V">
+                                            <size key="itemSize" width="128" height="128"/>
+                                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                        </collectionViewFlowLayout>
+                                        <cells>
+                                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="HomeCell" id="rmZ-Xj-sV9" customClass="HomePageCollectionViewCell" customModule="Zedit" customModuleProvider="target">
+                                                <rect key="frame" x="0.0" y="-34" width="128" height="128"/>
+                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="pYE-XV-610">
+                                                    <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                </collectionViewCellContentView>
+                                            </collectionViewCell>
+                                        </cells>
+                                    </collectionView>
                                     <button opaque="NO" contentMode="scaleToFill" showsMenuAsPrimaryAction="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" changesSelectionAsPrimaryAction="YES" translatesAutoresizingMaskIntoConstraints="NO" id="JdV-El-Sxq">
-                                        <rect key="frame" x="0.0" y="0.0" width="377" height="34.333333333333336"/>
+                                        <rect key="frame" x="0.0" y="80" width="377" height="34.333333333333343"/>
                                         <menu key="menu" id="zDE-Va-QyO">
                                             <children>
                                                 <command title="Item 1" id="MTn-IK-thI"/>
@@ -691,7 +714,7 @@
                                         <buttonConfiguration key="configuration" style="tinted"/>
                                     </button>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Kgf-CK-Ttu">
-                                        <rect key="frame" x="0.0" y="54.333333333333343" width="377" height="475.66666666666663"/>
+                                        <rect key="frame" x="0.0" y="134.33333333333334" width="377" height="395.66666666666663"/>
                                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                     </view>
                                     <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="anf-Uy-gdd">
@@ -724,7 +747,10 @@
                                     </stackView>
                                 </subviews>
                                 <constraints>
+                                    <constraint firstItem="HZY-oA-iJg" firstAttribute="leading" secondItem="aw8-qe-mWp" secondAttribute="leading" id="8k3-iU-PAa"/>
                                     <constraint firstItem="wP6-cX-dja" firstAttribute="top" secondItem="aw8-qe-mWp" secondAttribute="top" constant="660" id="EfA-4i-AJc"/>
+                                    <constraint firstItem="HZY-oA-iJg" firstAttribute="top" secondItem="aw8-qe-mWp" secondAttribute="top" id="ob4-bS-Rmh"/>
+                                    <constraint firstAttribute="trailing" secondItem="HZY-oA-iJg" secondAttribute="trailing" id="rzc-kI-fAW"/>
                                 </constraints>
                             </stackView>
                         </subviews>
@@ -746,6 +772,7 @@
                         </barButtonItem>
                     </navigationItem>
                     <connections>
+                        <outlet property="collectionView" destination="HZY-oA-iJg" id="4qg-zU-VsM"/>
                         <outlet property="videoPreviewView" destination="Kgf-CK-Ttu" id="sAW-vr-Sqa"/>
                         <outlet property="videoScrubber" destination="anf-Uy-gdd" id="nuE-xE-65n"/>
                         <outlet property="videoSelector" destination="JdV-El-Sxq" id="PGD-GU-BbO"/>
