--- a/Zedit-UIKit/Base.lproj/Main.storyboard
+++ b/Zedit-UIKit/Base.lproj/Main.storyboard
@@ -678,10 +678,16 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="aw8-qe-mWp">
-                                <rect key="frame" x="8" y="103" width="377" height="715"/>
+                                <rect key="frame" x="8" y="118" width="377" height="700"/>
                                 <subviews>
-                                    <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="HZY-oA-iJg">
-                                        <rect key="frame" x="0.0" y="0.0" width="377" height="60"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="My Videos" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vJq-B0-qCL">
+                                        <rect key="frame" x="0.0" y="0.0" width="377" height="18"/>
+                                        <fontDescription key="fontDescription" style="UICTFontTextStyleSubhead"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="HZY-oA-iJg">
+                                        <rect key="frame" x="0.0" y="38" width="377" height="62.333333333333343"/>
                                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="60" id="evi-oj-3QU"/>
@@ -694,7 +700,7 @@
                                         </collectionViewFlowLayout>
                                         <cells>
                                             <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="HomeCell" id="rmZ-Xj-sV9" customClass="HomePageCollectionViewCell" customModule="Zedit" customModuleProvider="target">
-                                                <rect key="frame" x="0.0" y="-34" width="128" height="128"/>
+                                                <rect key="frame" x="0.0" y="-32.666666666666664" width="128" height="128"/>
                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                 <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="pYE-XV-610">
                                                     <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
@@ -703,20 +709,28 @@
                                             </collectionViewCell>
                                         </cells>
                                     </collectionView>
-                                    <button opaque="NO" contentMode="scaleToFill" showsMenuAsPrimaryAction="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" changesSelectionAsPrimaryAction="YES" translatesAutoresizingMaskIntoConstraints="NO" id="JdV-El-Sxq">
-                                        <rect key="frame" x="0.0" y="80" width="377" height="34.333333333333343"/>
-                                        <menu key="menu" id="zDE-Va-QyO">
-                                            <children>
-                                                <command title="Item 1" id="MTn-IK-thI"/>
-                                                <command title="Item 2" id="S5b-1o-3bw"/>
-                                            </children>
-                                        </menu>
-                                        <buttonConfiguration key="configuration" style="tinted"/>
-                                    </button>
-                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Kgf-CK-Ttu">
-                                        <rect key="frame" x="0.0" y="134.33333333333334" width="377" height="395.66666666666663"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Preview" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="wmD-1R-6AZ">
+                                        <rect key="frame" x="0.0" y="58" width="377" height="18"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <fontDescription key="fontDescription" style="UICTFontTextStyleSubhead"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Kgf-CK-Ttu">
+                                        <rect key="frame" x="0.0" y="158.33333333333334" width="377" height="297.33333333333326"/>
                                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                     </view>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Fk9-sG-I7C">
+                                        <rect key="frame" x="0.0" y="475.66666666666663" width="377" height="20.333333333333314"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Krj-V9-Tzd">
+                                        <rect key="frame" x="0.0" y="516" width="377" height="14"/>
+                                        <state key="normal" title="Button"/>
+                                        <buttonConfiguration key="configuration" style="plain"/>
+                                    </button>
                                     <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="anf-Uy-gdd">
                                         <rect key="frame" x="0.0" y="550" width="377" height="90"/>
                                         <constraints>
@@ -726,17 +740,17 @@
                                         <viewLayoutGuide key="frameLayoutGuide" id="zxk-ge-F3S"/>
                                     </scrollView>
                                     <stackView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="280" distribution="fillEqually" spacing="30" translatesAutoresizingMaskIntoConstraints="NO" id="wP6-cX-dja">
-                                        <rect key="frame" x="0.0" y="660" width="377" height="55"/>
+                                        <rect key="frame" x="0.0" y="660" width="377" height="40"/>
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8TF-a7-UDQ">
-                                                <rect key="frame" x="0.0" y="0.0" width="173.66666666666666" height="55"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="173.66666666666666" height="40"/>
                                                 <buttonConfiguration key="configuration" style="plain" image="camera.filters" catalog="system" title="Colour Grade"/>
                                                 <connections>
                                                     <segue destination="aud-P5-i9c" kind="show" identifier="colorGrade" id="PXf-Jm-CAu"/>
                                                 </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="SW6-bM-0KG">
-                                                <rect key="frame" x="203.66666666666663" y="0.0" width="173.33333333333337" height="55"/>
+                                                <rect key="frame" x="203.66666666666663" y="0.0" width="173.33333333333337" height="40"/>
                                                 <state key="normal" title="Button"/>
                                                 <buttonConfiguration key="configuration" style="plain" image="diamond.circle" catalog="system" title="Generate Clips"/>
                                                 <connections>
@@ -749,7 +763,6 @@
                                 <constraints>
                                     <constraint firstItem="HZY-oA-iJg" firstAttribute="leading" secondItem="aw8-qe-mWp" secondAttribute="leading" id="8k3-iU-PAa"/>
                                     <constraint firstItem="wP6-cX-dja" firstAttribute="top" secondItem="aw8-qe-mWp" secondAttribute="top" constant="660" id="EfA-4i-AJc"/>
-                                    <constraint firstItem="HZY-oA-iJg" firstAttribute="top" secondItem="aw8-qe-mWp" secondAttribute="top" id="ob4-bS-Rmh"/>
                                     <constraint firstAttribute="trailing" secondItem="HZY-oA-iJg" secondAttribute="trailing" id="rzc-kI-fAW"/>
                                 </constraints>
                             </stackView>
@@ -757,10 +770,10 @@
                         <viewLayoutGuide key="safeArea" id="ReJ-UC-R89"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="aw8-qe-mWp" firstAttribute="top" secondItem="ReJ-UC-R89" secondAttribute="top" id="2WR-95-xxd"/>
                             <constraint firstItem="aw8-qe-mWp" firstAttribute="leading" secondItem="ReJ-UC-R89" secondAttribute="leading" constant="8" id="a3x-VF-nt8"/>
                             <constraint firstItem="ReJ-UC-R89" firstAttribute="bottom" secondItem="aw8-qe-mWp" secondAttribute="bottom" id="f5d-Zo-G8v"/>
                             <constraint firstItem="aw8-qe-mWp" firstAttribute="trailing" secondItem="ReJ-UC-R89" secondAttribute="trailing" constant="-8" id="i8V-Y8-MoL"/>
+                            <constraint firstItem="aw8-qe-mWp" firstAttribute="top" secondItem="ReJ-UC-R89" secondAttribute="top" constant="15" id="vzU-A5-5sP"/>
                         </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="Item" id="cuY-qa-zKx"/>
@@ -773,9 +786,10 @@
                     </navigationItem>
                     <connections>
                         <outlet property="collectionView" destination="HZY-oA-iJg" id="4qg-zU-VsM"/>
+                        <outlet property="playPauseButton" destination="Krj-V9-Tzd" id="eLJ-cM-GnB"/>
+                        <outlet property="timeLabel" destination="Fk9-sG-I7C" id="z0d-57-Btg"/>
                         <outlet property="videoPreviewView" destination="Kgf-CK-Ttu" id="sAW-vr-Sqa"/>
                         <outlet property="videoScrubber" destination="anf-Uy-gdd" id="nuE-xE-65n"/>
-                        <outlet property="videoSelector" destination="JdV-El-Sxq" id="PGD-GU-BbO"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="M2Y-va-npI" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
